udpated the index.html

--- a/static/index.html
+++ b/static/index.html
@@ -51,7 +51,7 @@
             // Remember to use application/json !
             xhr.open('POST', url, true)
             xhr.overrideMimeType('application/json')
-            xhr.setRequestHeader('Accept', 'applicaiton/json')
+            xhr.setRequestHeader('Accept', 'application/json')
 
             let json_text = JSON.stringify(objects)
             xhr.send(json_text)
